alb.tf
# Creating External LoadBalancer
resource "aws_lb" "external-alb" {
  name               = "External-LB"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.demosg.id]
  subnets            = [aws_subnet.public-subnet-1.id, aws_subnet.public-subnet-2.id]
  ####subnets            = [aws_subnet.public-subnet-1.id, aws_subnet.public-subnet-1.id]

}

resource "aws_lb_target_group" "target-elb" {
  name     = "ALB-TG"
  port     = 8080
  protocol = "HTTP"
  vpc_id   = aws_vpc.demovpc.id
}

resource "aws_lb_target_group_attachment" "attachment" {
  #### added
count =1
  target_group_arn = aws_lb_target_group.target-elb.arn
 #### target_group_arn = aws_lb_target_group.external-alb.arn
 
 
  ####target_id        = "aws_instance.demoinstance[0]"
  target_id       =   aws_instance.demoinstance.*.id[count.index]
 
 #### target_id        = aws_instance.demoinstance.id

 ###  vpc_security_group_ids      = ["${aws_security_group.demosg.id}"]
 ### subnet_id                   = "${aws_subnet.public-subnet-1.id}"
  port             = 80
  depends_on = [
    aws_instance.demoinstance,
  ]
}

resource "aws_lb_target_group_attachment" "attachment1" {
#### added
count =1
 ### target_group_arn = aws_lb_target_group.target-elb.arn
    target_group_arn = "${aws_lb_target_group.target-elb.arn}"
 #### target_group_arn = aws_lb_target_group.external-alb.arn
 
 ### target_id       = "aws_instance.demoinstance1[0]"
    target_id       =   aws_instance.demoinstance1.*.id[count.index]

  ####     target_id       =  aws_instance.demoinstance1.id
  ####target_id        = aws_instance.demoinstance1.id
  port             = 80

  depends_on = [
    aws_instance.demoinstance1,
  ]
}

resource "aws_lb_listener" "external-elb" {
  load_balancer_arn = aws_lb.external-alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.target-elb.arn
    ####     target_group_arn = aws_lb_target_group.external-alb.arn
  }
}
